@@ -8,23 +8,29 @@
 
 bg_ParallaxBG* bg_initBG(bg_BGConfig* cfg, SDL_Renderer* renderer)
 {
-    bg_ParallaxBG* bg = (bg_ParallaxBG*)malloc(sizeof(bg_ParallaxBG));
+    /* Allocate space for the BG struct */
+    bg_ParallaxBG* bg = malloc(sizeof(bg_ParallaxBG));
     assert(bg != NULL);
 
+    /* Allocate space for all the background layers */
     bg->layerCount = cfg->layerCount;
-    bg->layers = (bg_Layer*)malloc(cfg->layerCount * sizeof(bg_Layer));
+    bg->layers = malloc(cfg->layerCount * sizeof(bg_Layer));
     assert(bg->layers != NULL);
 
+
+    /* Initialize all the layers one by one */
     for(int i = 0; i < cfg->layerCount; i++)
     {
         bg_Layer* item = &bg->layers[i];
         
+        /* Load the texture and enable alpha blending */
         item->texture = u_loadPNG(renderer, cfg->layerImageFilePaths[i]);
         SDL_SetTextureBlendMode(item->texture, SDL_BLENDMODE_BLEND);
+
+        /* Set all other members to the appropriate values */
         SDL_QueryTexture(item->texture, NULL, NULL, &item->w, &item->h);
         item->x = 0;
         item->speed = cfg->layerSpeeds[i];
-
     }
 
     return bg;
@@ -32,6 +38,7 @@ bg_ParallaxBG* bg_initBG(bg_BGConfig* cfg, SDL_Renderer* renderer)
 
 void bg_updateBG(bg_ParallaxBG* bg)
 {
+    /* Simulate an infinite scrolling effect on all the layers */ 
     for(int i = 0; i < bg->layerCount; i++)
     {
         bg->layers[i].x += bg->layers[i].speed;
@@ -42,6 +49,7 @@ void bg_updateBG(bg_ParallaxBG* bg)
 
 void bg_drawBG(bg_ParallaxBG* bg, SDL_Renderer* renderer)
 {
+    /* Draw all the layers */
     for(int i = 0; i < bg->layerCount; i++)
     {
         SDL_Rect rect = { bg->layers[i].x, 0, bg->layers[i].w / 2, bg->layers[i].h };
@@ -51,12 +59,14 @@ void bg_drawBG(bg_ParallaxBG* bg, SDL_Renderer* renderer)
 
 void bg_destroyBG(bg_ParallaxBG* bg)
 {
+    /* Destroy the layers' textures, and then the whole bg->layers array */
     for(int i = 0; i < bg->layerCount; i++)
         SDL_DestroyTexture(bg->layers[i].texture);
         
     free(bg->layers);
     bg->layers = NULL;
     
+    /* Free the BG struct */
     free(bg);
     bg = NULL;
 }
